COMPILING tile spawn (not working, cuz never called)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "b
 bevy_kira_audio = { version = "0.12" }
 bevy_asset_loader = { version = "0.12" }
 rand = { version = "0.8.3" }
+partial_application = "0.2.1"
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.26.0", default-features = false }
